--- a/AllergyHistory/nbproject/project.properties
+++ b/AllergyHistory/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AllergyHistory
-main.class=allergyhistory.AllergyHistory
+main.class=allergyhistory.AllergyHistoryForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
