--- a/ITS340_Final_Project/allergyhistorytable/nbproject/project.properties
+++ b/ITS340_Final_Project/allergyhistorytable/nbproject/project.properties
@@ -28,16 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GeneralMedicalHistory.jar
+dist.jar=${dist.dir}/allergyhistorytable.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/GeneralMedicalHistory
+dist.jlink.output=${dist.jlink.dir}/allergyhistorytable
 excludes=
-file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\vitos\\Downloads\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.19.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=GeneralMedicalHistory
-main.class=generalmedicalhistory.InterviewForGeneralMedicalHistory
+jlink.launcher.name=allergyhistorytable
+main.class=allergyhistorytable.Allergyhistorytable
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
